--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.1
 cryptography==44.0.1
 Django==5.1.6
 django-allauth==65.4.1
+django-cors-headers==4.7.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 idna==3.10
@@ -13,5 +14,6 @@ pycparser==2.22
 PyJWT==2.10.1
 requests==2.32.3
 sqlparse==0.5.3
+svgwrite==1.4.3
 tzdata==2025.1
 urllib3==2.3.0
