--- a/.gitignore
+++ b/.gitignore
@@ -43,5 +43,5 @@ Thumbs.db
 **/migrations/*.py
 !**/migrations/__init__.py
 
-
-
+# Ignore all files in the construction-estimator directory
+construction-estimator/
