--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,102 @@
+accelerate==1.5.2
+aiofiles==23.2.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.14
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
 asgiref==3.8.1
+attrs==25.3.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.1
 cryptography==44.0.1
+cycler==0.12.1
+datasets==3.5.0
+dill==0.3.8
 Django==5.1.6
-django-allauth==65.4.1
-django-cors-headers==4.7.0
-djangorestframework==3.15.2
-djangorestframework_simplejwt==5.4.0
+ezdxf==1.4.0
+fastapi==0.115.12
+ffmpy==0.5.0
+filelock==3.18.0
+fonttools==4.56.0
+frozenlist==1.5.0
+fsspec==2024.12.0
+gradio_client==1.8.0
+groovy==0.1.2
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+huggingface-hub==0.29.3
 idna==3.10
+Jinja2==3.1.6
+joblib==1.4.2
+kiwisolver==1.4.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.2.0
+multiprocess==0.70.16
+narwhals==1.31.0
+networkx==3.4.2
+numpy==2.2.3
+opencv-python==4.11.0.86
+orjson==3.10.16
+packaging==24.2
+pandas==2.2.3
 pillow==11.1.0
+plotly==6.0.1
+propcache==0.3.1
+psutil==7.0.0
+pyarrow==19.0.1
 pycparser==2.22
+pydantic==2.11.1
+pydantic_core==2.33.0
+pydub==0.25.1
+Pygments==2.19.1
 PyJWT==2.10.1
+pyparsing==3.2.1
+python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+razorpay==1.4.2
+regex==2024.11.6
 requests==2.32.3
+rich==14.0.0
+ruff==0.11.2
+safehttpx==0.1.6
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+semantic-version==2.10.0
+sentencepiece==0.2.0
+shapely==2.0.7
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
+starlette==0.46.1
 svgwrite==1.4.3
+sympy==1.13.1
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+tomlkit==0.13.2
+torch==2.6.0
+tqdm==4.67.1
+transformers==4.50.3
+typer==0.15.2
+typing-inspection==0.4.0
+typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
+uvicorn==0.34.0
+websockets==15.0.1
+xgboost==3.0.0
+xxhash==3.5.0
+yarl==1.18.3
